# SimpleBank

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/adapters/: repository.py
accounts/domain/: constants.py  exceptions.py  models.py
accounts/migrations/: 0001_initial.py
accounts/service_layer/: commands.py  handlers.py  unit_of_work.py
accounts/tests/: test_authentication.py  test_balance.py  test_domain.py  test_handlers.py  test_registration.py  test_transactions.py  test_transfers.py
simplebank/: asgi.py  settings.py  urls.py  wsgi.py
